src/y.output
状态 138conflicts: 1 shift/reduce


语法

    0 $accept: program $end

    1 program: program_head routine DOT

    2 program_head: PROGRAM id SEMI

    3 routine: routine_head routine_body

    4 routine_head: label_part const_part type_part var_part routine_part

    5 label_part: %empty

    6 const_part: CONST const_expr_list
    7           | %empty

    8 const_expr_list: id EQUAL const_value SEMI const_expr_list
    9                | id EQUAL const_value SEMI

   10 const_value: INTEGER
   11            | REAL
   12            | CHAR
   13            | STRING
   14            | sys_con

   15 type_part: TYPE type_decl_list
   16          | %empty

   17 type_decl_list: type_definition type_decl_list
   18               | type_definition

   19 type_definition: id EQUAL type_decl SEMI

   20 type_decl: simple_type_decl
   21          | array_type_decl
   22          | record_type_decl

   23 simple_type_decl: sys_type
   24                 | id
   25                 | LP name_list RP
   26                 | const_value DOTDOT const_value
   27                 | MINUS const_value DOTDOT const_value
   28                 | MINUS const_value DOTDOT MINUS const_value
   29                 | id DOTDOT id

   30 array_type_decl: ARRAY LB simple_type_decl RB OF type_decl

   31 record_type_decl: RECORD field_decl_list END

   32 field_decl_list: field_decl field_decl_list
   33                | field_decl

   34 field_decl: name_list COLON type_decl SEMI

   35 name_list: name_list COMMA id
   36          | id

   37 var_part: VAR var_decl_list
   38         | %empty

   39 var_decl_list: var_decl var_decl_list
   40              | var_decl

   41 var_decl: name_list COLON type_decl SEMI

   42 routine_part: function_decl routine_part
   43             | procedure_decl routine_part
   44             | %empty

   45 function_decl: function_head SEMI sub_routine SEMI

   46 function_head: FUNCTION id parameters COLON simple_type_decl

   47 procedure_decl: procedure_head SEMI sub_routine SEMI

   48 procedure_head: PROCEDURE id parameters

   49 sub_routine: routine_head routine_body

   50 parameters: LP para_decl_list RP
   51           | %empty

   52 para_decl_list: para_decl_list SEMI para_type_list
   53               | para_type_list

   54 para_type_list: var_para_list COLON simple_type_decl
   55               | val_para_list COLON simple_type_decl

   56 var_para_list: VAR name_list

   57 val_para_list: name_list

   58 routine_body: compound_stmt

   59 compound_stmt: BEGIN_T stmt_list END

   60 stmt_list: stmt SEMI stmt_list
   61          | %empty

   62 stmt: INTEGER COLON non_label_stmt
   63     | non_label_stmt

   64 non_label_stmt: assign_stmt
   65               | proc_stmt
   66               | compound_stmt
   67               | if_stmt
   68               | repeat_stmt
   69               | while_stmt
   70               | for_stmt
   71               | case_stmt
   72               | goto_stmt

   73 assign_stmt: id ASSIGN expression
   74            | id LB expression RB ASSIGN expression
   75            | id DOT id ASSIGN expression

   76 proc_stmt: id
   77          | id LP args_list RP
   78          | sys_proc
   79          | sys_proc LP expression_list RP
   80          | READ LP factor RP

   81 if_stmt: IF expression THEN stmt else_clause

   82 else_clause: ELSE stmt
   83            | %empty

   84 repeat_stmt: REPEAT stmt UNTIL expression

   85 while_stmt: WHILE expression DO stmt

   86 for_stmt: FOR id ASSIGN expression direction expression DO stmt

   87 direction: TO
   88          | DOWNTO

   89 case_stmt: CASE expression OF case_expr_list END

   90 case_expr_list: case_expr case_expr_list
   91               | case_expr

   92 case_expr: const_value COLON stmt SEMI
   93          | id COLON stmt SEMI

   94 goto_stmt: GOTO INTEGER

   95 expression_list: expression COMMA expression_list
   96                | expression

   97 expression: expression GE expr
   98           | expression GT expr
   99           | expression LE expr
  100           | expression LT expr
  101           | expression EQUAL expr
  102           | expression UNEQUAL expr
  103           | expr

  104 expr: expr PLUS term
  105     | expr MINUS term
  106     | expr OR term
  107     | term

  108 term: term MUL factor
  109     | term INTDIV factor
  110     | term REALDIV factor
  111     | term MOD factor
  112     | term AND factor
  113     | factor

  114 factor: id
  115       | id LP args_list RP
  116       | sys_funct
  117       | sys_funct LP args_list RP
  118       | const_value
  119       | LP expression RP
  120       | NOT factor
  121       | MINUS factor
  122       | id LB expression RB
  123       | id DOT id

  124 args_list: args_list COMMA expression
  125          | expression

  126 id: ID

  127 sys_con: SYS_CON

  128 sys_funct: SYS_FUNCT

  129 sys_proc: SYS_PROC

  130 sys_type: SYS_TYPE


Terminals, with rules where they appear

$end (0) 0
error (256)
LP (258) 25 50 77 79 80 115 117 119
RP (259) 25 50 77 79 80 115 117 119
LB (260) 30 74 122
RB (261) 30 74 122
DOT (262) 1 75 123
COMMA (263) 35 95 124
COLON (264) 34 41 46 54 55 62 92 93
SEMI (265) 2 8 9 19 34 41 45 47 52 60 92 93
PLUS (266) 104
MINUS (267) 27 28 105 121
MUL (268) 108
REALDIV (269) 110
INTDIV (270) 109
MOD (271) 111
AND (272) 112
OR (273) 106
NOT (274) 120
GE (275) 97
GT (276) 98
LE (277) 99
LT (278) 100
EQUAL (279) 8 9 19 101
UNEQUAL (280) 102
ASSIGN (281) 73 74 75 86
PROGRAM (282) 2
FUNCTION (283) 46
PROCEDURE (284) 48
BEGIN_T (285) 59
END (286) 31 59 89
TYPE (287) 15
ARRAY (288) 30
OF (289) 30 89
RECORD (290) 31
VAR (291) 37 56
IF (292) 81
THEN (293) 81
ELSE (294) 82
REPEAT (295) 84
TO (296) 87
DOWNTO (297) 88
UNTIL (298) 84
WHILE (299) 85
DO (300) 85 86
FOR (301) 86
CASE (302) 89
GOTO (303) 94
READ (304) 80
CONST (305) 6
DOTDOT (306) 26 27 28 29
INTEGER (307) 10 62 94
REAL (308) 11
CHAR (309) 12
ID (310) 126
STRING (311) 13
SYS_CON (312) 127
SYS_FUNCT (313) 128
SYS_PROC (314) 129
SYS_TYPE (315) 130


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
program (62)
    on left: 1, on right: 0
program_head (63)
    on left: 2, on right: 1
routine (64)
    on left: 3, on right: 1
routine_head (65)
    on left: 4, on right: 3 49
label_part (66)
    on left: 5, on right: 4
const_part (67)
    on left: 6 7, on right: 4
const_expr_list (68)
    on left: 8 9, on right: 6 8
const_value (69)
    on left: 10 11 12 13 14, on right: 8 9 26 27 28 92 118
type_part (70)
    on left: 15 16, on right: 4
type_decl_list (71)
    on left: 17 18, on right: 15 17
type_definition (72)
    on left: 19, on right: 17 18
type_decl (73)
    on left: 20 21 22, on right: 19 30 34 41
simple_type_decl (74)
    on left: 23 24 25 26 27 28 29, on right: 20 30 46 54 55
array_type_decl (75)
    on left: 30, on right: 21
record_type_decl (76)
    on left: 31, on right: 22
field_decl_list (77)
    on left: 32 33, on right: 31 32
field_decl (78)
    on left: 34, on right: 32 33
name_list (79)
    on left: 35 36, on right: 25 34 35 41 56 57
var_part (80)
    on left: 37 38, on right: 4
var_decl_list (81)
    on left: 39 40, on right: 37 39
var_decl (82)
    on left: 41, on right: 39 40
routine_part (83)
    on left: 42 43 44, on right: 4 42 43
function_decl (84)
    on left: 45, on right: 42
function_head (85)
    on left: 46, on right: 45
procedure_decl (86)
    on left: 47, on right: 43
procedure_head (87)
    on left: 48, on right: 47
sub_routine (88)
    on left: 49, on right: 45 47
parameters (89)
    on left: 50 51, on right: 46 48
para_decl_list (90)
    on left: 52 53, on right: 50 52
para_type_list (91)
    on left: 54 55, on right: 52 53
var_para_list (92)
    on left: 56, on right: 54
val_para_list (93)
    on left: 57, on right: 55
routine_body (94)
    on left: 58, on right: 3 49
compound_stmt (95)
    on left: 59, on right: 58 66
stmt_list (96)
    on left: 60 61, on right: 59 60
stmt (97)
    on left: 62 63, on right: 60 81 82 84 85 86 92 93
non_label_stmt (98)
    on left: 64 65 66 67 68 69 70 71 72, on right: 62 63
assign_stmt (99)
    on left: 73 74 75, on right: 64
proc_stmt (100)
    on left: 76 77 78 79 80, on right: 65
if_stmt (101)
    on left: 81, on right: 67
else_clause (102)
    on left: 82 83, on right: 81
repeat_stmt (103)
    on left: 84, on right: 68
while_stmt (104)
    on left: 85, on right: 69
for_stmt (105)
    on left: 86, on right: 70
direction (106)
    on left: 87 88, on right: 86
case_stmt (107)
    on left: 89, on right: 71
case_expr_list (108)
    on left: 90 91, on right: 89 90
case_expr (109)
    on left: 92 93, on right: 90 91
goto_stmt (110)
    on left: 94, on right: 72
expression_list (111)
    on left: 95 96, on right: 79 95
expression (112)
    on left: 97 98 99 100 101 102 103, on right: 73 74 75 81 84 85
    86 89 95 96 97 98 99 100 101 102 119 122 124 125
expr (113)
    on left: 104 105 106 107, on right: 97 98 99 100 101 102 103 104
    105 106
term (114)
    on left: 108 109 110 111 112 113, on right: 104 105 106 107 108
    109 110 111 112
factor (115)
    on left: 114 115 116 117 118 119 120 121 122 123, on right: 80
    108 109 110 111 112 113 120 121
args_list (116)
    on left: 124 125, on right: 77 115 117 124
id (117)
    on left: 126, on right: 2 8 9 19 24 29 35 36 46 48 73 74 75 76
    77 86 93 114 115 122 123
sys_con (118)
    on left: 127, on right: 14
sys_funct (119)
    on left: 128, on right: 116 117
sys_proc (120)
    on left: 129, on right: 78 79
sys_type (121)
    on left: 130, on right: 23


State 0

    0 $accept: . program $end

    PROGRAM  shift, and go to state 1

    program       转到状态 2
    program_head  转到状态 3


State 1

    2 program_head: PROGRAM . id SEMI

    ID  shift, and go to state 4

    id  转到状态 5


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: program_head . routine DOT

    $default  reduce using rule 5 (label_part)

    routine       转到状态 7
    routine_head  转到状态 8
    label_part    转到状态 9


State 4

  126 id: ID .

    $default  reduce using rule 126 (id)


State 5

    2 program_head: PROGRAM id . SEMI

    SEMI  shift, and go to state 10


State 6

    0 $accept: program $end .

    $default  接受


State 7

    1 program: program_head routine . DOT

    DOT  shift, and go to state 11


State 8

    3 routine: routine_head . routine_body

    BEGIN_T  shift, and go to state 12

    routine_body   转到状态 13
    compound_stmt  转到状态 14


State 9

    4 routine_head: label_part . const_part type_part var_part routine_part

    CONST  shift, and go to state 15

    $default  reduce using rule 7 (const_part)

    const_part  转到状态 16


State 10

    2 program_head: PROGRAM id SEMI .

    $default  reduce using rule 2 (program_head)


State 11

    1 program: program_head routine DOT .

    $default  reduce using rule 1 (program)


State 12

   59 compound_stmt: BEGIN_T . stmt_list END

    BEGIN_T   shift, and go to state 12
    IF        shift, and go to state 17
    REPEAT    shift, and go to state 18
    WHILE     shift, and go to state 19
    FOR       shift, and go to state 20
    CASE      shift, and go to state 21
    GOTO      shift, and go to state 22
    READ      shift, and go to state 23
    INTEGER   shift, and go to state 24
    ID        shift, and go to state 4
    SYS_PROC  shift, and go to state 25

    $default  reduce using rule 61 (stmt_list)

    compound_stmt   转到状态 26
    stmt_list       转到状态 27
    stmt            转到状态 28
    non_label_stmt  转到状态 29
    assign_stmt     转到状态 30
    proc_stmt       转到状态 31
    if_stmt         转到状态 32
    repeat_stmt     转到状态 33
    while_stmt      转到状态 34
    for_stmt        转到状态 35
    case_stmt       转到状态 36
    goto_stmt       转到状态 37
    id              转到状态 38
    sys_proc        转到状态 39


State 13

    3 routine: routine_head routine_body .

    $default  reduce using rule 3 (routine)


State 14

   58 routine_body: compound_stmt .

    $default  reduce using rule 58 (routine_body)


State 15

    6 const_part: CONST . const_expr_list

    ID  shift, and go to state 4

    const_expr_list  转到状态 40
    id               转到状态 41


State 16

    4 routine_head: label_part const_part . type_part var_part routine_part

    TYPE  shift, and go to state 42

    $default  reduce using rule 16 (type_part)

    type_part  转到状态 43


State 17

   81 if_stmt: IF . expression THEN stmt else_clause

    LP         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    INTEGER    shift, and go to state 47
    REAL       shift, and go to state 48
    CHAR       shift, and go to state 49
    ID         shift, and go to state 4
    STRING     shift, and go to state 50
    SYS_CON    shift, and go to state 51
    SYS_FUNCT  shift, and go to state 52

    const_value  转到状态 53
    expression   转到状态 54
    expr         转到状态 55
    term         转到状态 56
    factor       转到状态 57
    id           转到状态 58
    sys_con      转到状态 59
    sys_funct    转到状态 60


State 18

   84 repeat_stmt: REPEAT . stmt UNTIL expression

    BEGIN_T   shift, and go to state 12
    IF        shift, and go to state 17
    REPEAT    shift, and go to state 18
    WHILE     shift, and go to state 19
    FOR       shift, and go to state 20
    CASE      shift, and go to state 21
    GOTO      shift, and go to state 22
    READ      shift, and go to state 23
    INTEGER   shift, and go to state 24
    ID        shift, and go to state 4
    SYS_PROC  shift, and go to state 25

    compound_stmt   转到状态 26
    stmt            转到状态 61
    non_label_stmt  转到状态 29
    assign_stmt     转到状态 30
    proc_stmt       转到状态 31
    if_stmt         转到状态 32
    repeat_stmt     转到状态 33
    while_stmt      转到状态 34
    for_stmt        转到状态 35
    case_stmt       转到状态 36
    goto_stmt       转到状态 37
    id              转到状态 38
    sys_proc        转到状态 39


State 19

   85 while_stmt: WHILE . expression DO stmt

    LP         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    INTEGER    shift, and go to state 47
    REAL       shift, and go to state 48
    CHAR       shift, and go to state 49
    ID         shift, and go to state 4
    STRING     shift, and go to state 50
    SYS_CON    shift, and go to state 51
    SYS_FUNCT  shift, and go to state 52

    const_value  转到状态 53
    expression   转到状态 62
    expr         转到状态 55
    term         转到状态 56
    factor       转到状态 57
    id           转到状态 58
    sys_con      转到状态 59
    sys_funct    转到状态 60


State 20

   86 for_stmt: FOR . id ASSIGN expression direction expression DO stmt

    ID  shift, and go to state 4

    id  转到状态 63


State 21

   89 case_stmt: CASE . expression OF case_expr_list END

    LP         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    INTEGER    shift, and go to state 47
    REAL       shift, and go to state 48
    CHAR       shift, and go to state 49
    ID         shift, and go to state 4
    STRING     shift, and go to state 50
    SYS_CON    shift, and go to state 51
    SYS_FUNCT  shift, and go to state 52

    const_value  转到状态 53
    expression   转到状态 64
    expr         转到状态 55
    term         转到状态 56
    factor       转到状态 57
    id           转到状态 58
    sys_con      转到状态 59
    sys_funct    转到状态 60


State 22

   94 goto_stmt: GOTO . INTEGER

    INTEGER  shift, and go to state 65


State 23

   80 proc_stmt: READ . LP factor RP

    LP  shift, and go to state 66


State 24

   62 stmt: INTEGER . COLON non_label_stmt

    COLON  shift, and go to state 67


State 25

  129 sys_proc: SYS_PROC .

    $default  reduce using rule 129 (sys_proc)


State 26

   66 non_label_stmt: compound_stmt .

    $default  reduce using rule 66 (non_label_stmt)


State 27

   59 compound_stmt: BEGIN_T stmt_list . END

    END  shift, and go to state 68


State 28

   60 stmt_list: stmt . SEMI stmt_list

    SEMI  shift, and go to state 69


State 29

   63 stmt: non_label_stmt .

    $default  reduce using rule 63 (stmt)


State 30

   64 non_label_stmt: assign_stmt .

    $default  reduce using rule 64 (non_label_stmt)


State 31

   65 non_label_stmt: proc_stmt .

    $default  reduce using rule 65 (non_label_stmt)


State 32

   67 non_label_stmt: if_stmt .

    $default  reduce using rule 67 (non_label_stmt)


State 33

   68 non_label_stmt: repeat_stmt .

    $default  reduce using rule 68 (non_label_stmt)


State 34

   69 non_label_stmt: while_stmt .

    $default  reduce using rule 69 (non_label_stmt)


State 35

   70 non_label_stmt: for_stmt .

    $default  reduce using rule 70 (non_label_stmt)


State 36

   71 non_label_stmt: case_stmt .

    $default  reduce using rule 71 (non_label_stmt)


State 37

   72 non_label_stmt: goto_stmt .

    $default  reduce using rule 72 (non_label_stmt)


State 38

   73 assign_stmt: id . ASSIGN expression
   74            | id . LB expression RB ASSIGN expression
   75            | id . DOT id ASSIGN expression
   76 proc_stmt: id .
   77          | id . LP args_list RP

    LP      shift, and go to state 70
    LB      shift, and go to state 71
    DOT     shift, and go to state 72
    ASSIGN  shift, and go to state 73

    $default  reduce using rule 76 (proc_stmt)


State 39

   78 proc_stmt: sys_proc .
   79          | sys_proc . LP expression_list RP

    LP  shift, and go to state 74

    $default  reduce using rule 78 (proc_stmt)


State 40

    6 const_part: CONST const_expr_list .

    $default  reduce using rule 6 (const_part)


State 41

    8 const_expr_list: id . EQUAL const_value SEMI const_expr_list
    9                | id . EQUAL const_value SEMI

    EQUAL  shift, and go to state 75


State 42

   15 type_part: TYPE . type_decl_list

    ID  shift, and go to state 4

    type_decl_list   转到状态 76
    type_definition  转到状态 77
    id               转到状态 78


State 43

    4 routine_head: label_part const_part type_part . var_part routine_part

    VAR  shift, and go to state 79

    $default  reduce using rule 38 (var_part)

    var_part  转到状态 80


State 44

  119 factor: LP . expression RP

    LP         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    INTEGER    shift, and go to state 47
    REAL       shift, and go to state 48
    CHAR       shift, and go to state 49
    ID         shift, and go to state 4
    STRING     shift, and go to state 50
    SYS_CON    shift, and go to state 51
    SYS_FUNCT  shift, and go to state 52

    const_value  转到状态 53
    expression   转到状态 81
    expr         转到状态 55
    term         转到状态 56
    factor       转到状态 57
    id           转到状态 58
    sys_con      转到状态 59
    sys_funct    转到状态 60


State 45

  121 factor: MINUS . factor

    LP         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    INTEGER    shift, and go to state 47
    REAL       shift, and go to state 48
    CHAR       shift, and go to state 49
    ID         shift, and go to state 4
    STRING     shift, and go to state 50
    SYS_CON    shift, and go to state 51
    SYS_FUNCT  shift, and go to state 52

    const_value  转到状态 53
    factor       转到状态 82
    id           转到状态 58
    sys_con      转到状态 59
    sys_funct    转到状态 60


State 46

  120 factor: NOT . factor

    LP         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    INTEGER    shift, and go to state 47
    REAL       shift, and go to state 48
    CHAR       shift, and go to state 49
    ID         shift, and go to state 4
    STRING     shift, and go to state 50
    SYS_CON    shift, and go to state 51
    SYS_FUNCT  shift, and go to state 52

    const_value  转到状态 53
    factor       转到状态 83
    id           转到状态 58
    sys_con      转到状态 59
    sys_funct    转到状态 60


State 47

   10 const_value: INTEGER .

    $default  reduce using rule 10 (const_value)


State 48

   11 const_value: REAL .

    $default  reduce using rule 11 (const_value)


State 49

   12 const_value: CHAR .

    $default  reduce using rule 12 (const_value)


State 50

   13 const_value: STRING .

    $default  reduce using rule 13 (const_value)


State 51

  127 sys_con: SYS_CON .

    $default  reduce using rule 127 (sys_con)


State 52

  128 sys_funct: SYS_FUNCT .

    $default  reduce using rule 128 (sys_funct)


State 53

  118 factor: const_value .

    $default  reduce using rule 118 (factor)


State 54

   81 if_stmt: IF expression . THEN stmt else_clause
   97 expression: expression . GE expr
   98           | expression . GT expr
   99           | expression . LE expr
  100           | expression . LT expr
  101           | expression . EQUAL expr
  102           | expression . UNEQUAL expr

    GE       shift, and go to state 84
    GT       shift, and go to state 85
    LE       shift, and go to state 86
    LT       shift, and go to state 87
    EQUAL    shift, and go to state 88
    UNEQUAL  shift, and go to state 89
    THEN     shift, and go to state 90


State 55

  103 expression: expr .
  104 expr: expr . PLUS term
  105     | expr . MINUS term
  106     | expr . OR term

    PLUS   shift, and go to state 91
    MINUS  shift, and go to state 92
    OR     shift, and go to state 93

    $default  reduce using rule 103 (expression)


State 56

  107 expr: term .
  108 term: term . MUL factor
  109     | term . INTDIV factor
  110     | term . REALDIV factor
  111     | term . MOD factor
  112     | term . AND factor

    MUL      shift, and go to state 94
    REALDIV  shift, and go to state 95
    INTDIV   shift, and go to state 96
    MOD      shift, and go to state 97
    AND      shift, and go to state 98

    $default  reduce using rule 107 (expr)


State 57

  113 term: factor .

    $default  reduce using rule 113 (term)


State 58

  114 factor: id .
  115       | id . LP args_list RP
  122       | id . LB expression RB
  123       | id . DOT id

    LP   shift, and go to state 99
    LB   shift, and go to state 100
    DOT  shift, and go to state 101

    $default  reduce using rule 114 (factor)


State 59

   14 const_value: sys_con .

    $default  reduce using rule 14 (const_value)


State 60

  116 factor: sys_funct .
  117       | sys_funct . LP args_list RP

    LP  shift, and go to state 102

    $default  reduce using rule 116 (factor)


State 61

   84 repeat_stmt: REPEAT stmt . UNTIL expression

    UNTIL  shift, and go to state 103


State 62

   85 while_stmt: WHILE expression . DO stmt
   97 expression: expression . GE expr
   98           | expression . GT expr
   99           | expression . LE expr
  100           | expression . LT expr
  101           | expression . EQUAL expr
  102           | expression . UNEQUAL expr

    GE       shift, and go to state 84
    GT       shift, and go to state 85
    LE       shift, and go to state 86
    LT       shift, and go to state 87
    EQUAL    shift, and go to state 88
    UNEQUAL  shift, and go to state 89
    DO       shift, and go to state 104


State 63

   86 for_stmt: FOR id . ASSIGN expression direction expression DO stmt

    ASSIGN  shift, and go to state 105


State 64

   89 case_stmt: CASE expression . OF case_expr_list END
   97 expression: expression . GE expr
   98           | expression . GT expr
   99           | expression . LE expr
  100           | expression . LT expr
  101           | expression . EQUAL expr
  102           | expression . UNEQUAL expr

    GE       shift, and go to state 84
    GT       shift, and go to state 85
    LE       shift, and go to state 86
    LT       shift, and go to state 87
    EQUAL    shift, and go to state 88
    UNEQUAL  shift, and go to state 89
    OF       shift, and go to state 106


State 65

   94 goto_stmt: GOTO INTEGER .

    $default  reduce using rule 94 (goto_stmt)


State 66

   80 proc_stmt: READ LP . factor RP

    LP         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    INTEGER    shift, and go to state 47
    REAL       shift, and go to state 48
    CHAR       shift, and go to state 49
    ID         shift, and go to state 4
    STRING     shift, and go to state 50
    SYS_CON    shift, and go to state 51
    SYS_FUNCT  shift, and go to state 52

    const_value  转到状态 53
    factor       转到状态 107
    id           转到状态 58
    sys_con      转到状态 59
    sys_funct    转到状态 60


State 67

   62 stmt: INTEGER COLON . non_label_stmt

    BEGIN_T   shift, and go to state 12
    IF        shift, and go to state 17
    REPEAT    shift, and go to state 18
    WHILE     shift, and go to state 19
    FOR       shift, and go to state 20
    CASE      shift, and go to state 21
    GOTO      shift, and go to state 22
    READ      shift, and go to state 23
    ID        shift, and go to state 4
    SYS_PROC  shift, and go to state 25

    compound_stmt   转到状态 26
    non_label_stmt  转到状态 108
    assign_stmt     转到状态 30
    proc_stmt       转到状态 31
    if_stmt         转到状态 32
    repeat_stmt     转到状态 33
    while_stmt      转到状态 34
    for_stmt        转到状态 35
    case_stmt       转到状态 36
    goto_stmt       转到状态 37
    id              转到状态 38
    sys_proc        转到状态 39


State 68

   59 compound_stmt: BEGIN_T stmt_list END .

    $default  reduce using rule 59 (compound_stmt)


State 69

   60 stmt_list: stmt SEMI . stmt_list

    BEGIN_T   shift, and go to state 12
    IF        shift, and go to state 17
    REPEAT    shift, and go to state 18
    WHILE     shift, and go to state 19
    FOR       shift, and go to state 20
    CASE      shift, and go to state 21
    GOTO      shift, and go to state 22
    READ      shift, and go to state 23
    INTEGER   shift, and go to state 24
    ID        shift, and go to state 4
    SYS_PROC  shift, and go to state 25

    $default  reduce using rule 61 (stmt_list)

    compound_stmt   转到状态 26
    stmt_list       转到状态 109
    stmt            转到状态 28
    non_label_stmt  转到状态 29
    assign_stmt     转到状态 30
    proc_stmt       转到状态 31
    if_stmt         转到状态 32
    repeat_stmt     转到状态 33
    while_stmt      转到状态 34
    for_stmt        转到状态 35
    case_stmt       转到状态 36
    goto_stmt       转到状态 37
    id              转到状态 38
    sys_proc        转到状态 39


State 70

   77 proc_stmt: id LP . args_list RP

    LP         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    INTEGER    shift, and go to state 47
    REAL       shift, and go to state 48
    CHAR       shift, and go to state 49
    ID         shift, and go to state 4
    STRING     shift, and go to state 50
    SYS_CON    shift, and go to state 51
    SYS_FUNCT  shift, and go to state 52

    const_value  转到状态 53
    expression   转到状态 110
    expr         转到状态 55
    term         转到状态 56
    factor       转到状态 57
    args_list    转到状态 111
    id           转到状态 58
    sys_con      转到状态 59
    sys_funct    转到状态 60


State 71

   74 assign_stmt: id LB . expression RB ASSIGN expression

    LP         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    INTEGER    shift, and go to state 47
    REAL       shift, and go to state 48
    CHAR       shift, and go to state 49
    ID         shift, and go to state 4
    STRING     shift, and go to state 50
    SYS_CON    shift, and go to state 51
    SYS_FUNCT  shift, and go to state 52

    const_value  转到状态 53
    expression   转到状态 112
    expr         转到状态 55
    term         转到状态 56
    factor       转到状态 57
    id           转到状态 58
    sys_con      转到状态 59
    sys_funct    转到状态 60


State 72

   75 assign_stmt: id DOT . id ASSIGN expression

    ID  shift, and go to state 4

    id  转到状态 113


State 73

   73 assign_stmt: id ASSIGN . expression

    LP         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    INTEGER    shift, and go to state 47
    REAL       shift, and go to state 48
    CHAR       shift, and go to state 49
    ID         shift, and go to state 4
    STRING     shift, and go to state 50
    SYS_CON    shift, and go to state 51
    SYS_FUNCT  shift, and go to state 52

    const_value  转到状态 53
    expression   转到状态 114
    expr         转到状态 55
    term         转到状态 56
    factor       转到状态 57
    id           转到状态 58
    sys_con      转到状态 59
    sys_funct    转到状态 60


State 74

   79 proc_stmt: sys_proc LP . expression_list RP

    LP         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    INTEGER    shift, and go to state 47
    REAL       shift, and go to state 48
    CHAR       shift, and go to state 49
    ID         shift, and go to state 4
    STRING     shift, and go to state 50
    SYS_CON    shift, and go to state 51
    SYS_FUNCT  shift, and go to state 52

    const_value      转到状态 53
    expression_list  转到状态 115
    expression       转到状态 116
    expr             转到状态 55
    term             转到状态 56
    factor           转到状态 57
    id               转到状态 58
    sys_con          转到状态 59
    sys_funct        转到状态 60


State 75

    8 const_expr_list: id EQUAL . const_value SEMI const_expr_list
    9                | id EQUAL . const_value SEMI

    INTEGER  shift, and go to state 47
    REAL     shift, and go to state 48
    CHAR     shift, and go to state 49
    STRING   shift, and go to state 50
    SYS_CON  shift, and go to state 51

    const_value  转到状态 117
    sys_con      转到状态 59


State 76

   15 type_part: TYPE type_decl_list .

    $default  reduce using rule 15 (type_part)


State 77

   17 type_decl_list: type_definition . type_decl_list
   18               | type_definition .

    ID  shift, and go to state 4

    $default  reduce using rule 18 (type_decl_list)

    type_decl_list   转到状态 118
    type_definition  转到状态 77
    id               转到状态 78


State 78

   19 type_definition: id . EQUAL type_decl SEMI

    EQUAL  shift, and go to state 119


State 79

   37 var_part: VAR . var_decl_list

    ID  shift, and go to state 4

    name_list      转到状态 120
    var_decl_list  转到状态 121
    var_decl       转到状态 122
    id             转到状态 123


State 80

    4 routine_head: label_part const_part type_part var_part . routine_part

    FUNCTION   shift, and go to state 124
    PROCEDURE  shift, and go to state 125

    $default  reduce using rule 44 (routine_part)

    routine_part    转到状态 126
    function_decl   转到状态 127
    function_head   转到状态 128
    procedure_decl  转到状态 129
    procedure_head  转到状态 130


State 81

   97 expression: expression . GE expr
   98           | expression . GT expr
   99           | expression . LE expr
  100           | expression . LT expr
  101           | expression . EQUAL expr
  102           | expression . UNEQUAL expr
  119 factor: LP expression . RP

    RP       shift, and go to state 131
    GE       shift, and go to state 84
    GT       shift, and go to state 85
    LE       shift, and go to state 86
    LT       shift, and go to state 87
    EQUAL    shift, and go to state 88
    UNEQUAL  shift, and go to state 89


State 82

  121 factor: MINUS factor .

    $default  reduce using rule 121 (factor)


State 83

  120 factor: NOT factor .

    $default  reduce using rule 120 (factor)


State 84

   97 expression: expression GE . expr

    LP         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    INTEGER    shift, and go to state 47
    REAL       shift, and go to state 48
    CHAR       shift, and go to state 49
    ID         shift, and go to state 4
    STRING     shift, and go to state 50
    SYS_CON    shift, and go to state 51
    SYS_FUNCT  shift, and go to state 52

    const_value  转到状态 53
    expr         转到状态 132
    term         转到状态 56
    factor       转到状态 57
    id           转到状态 58
    sys_con      转到状态 59
    sys_funct    转到状态 60


State 85

   98 expression: expression GT . expr

    LP         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    INTEGER    shift, and go to state 47
    REAL       shift, and go to state 48
    CHAR       shift, and go to state 49
    ID         shift, and go to state 4
    STRING     shift, and go to state 50
    SYS_CON    shift, and go to state 51
    SYS_FUNCT  shift, and go to state 52

    const_value  转到状态 53
    expr         转到状态 133
    term         转到状态 56
    factor       转到状态 57
    id           转到状态 58
    sys_con      转到状态 59
    sys_funct    转到状态 60


State 86

   99 expression: expression LE . expr

    LP         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    INTEGER    shift, and go to state 47
    REAL       shift, and go to state 48
    CHAR       shift, and go to state 49
    ID         shift, and go to state 4
    STRING     shift, and go to state 50
    SYS_CON    shift, and go to state 51
    SYS_FUNCT  shift, and go to state 52

    const_value  转到状态 53
    expr         转到状态 134
    term         转到状态 56
    factor       转到状态 57
    id           转到状态 58
    sys_con      转到状态 59
    sys_funct    转到状态 60


State 87

  100 expression: expression LT . expr

    LP         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    INTEGER    shift, and go to state 47
    REAL       shift, and go to state 48
    CHAR       shift, and go to state 49
    ID         shift, and go to state 4
    STRING     shift, and go to state 50
    SYS_CON    shift, and go to state 51
    SYS_FUNCT  shift, and go to state 52

    const_value  转到状态 53
    expr         转到状态 135
    term         转到状态 56
    factor       转到状态 57
    id           转到状态 58
    sys_con      转到状态 59
    sys_funct    转到状态 60


State 88

  101 expression: expression EQUAL . expr

    LP         shift, and go to state 44
    MINUS      shift, and go to state 45
    NOT        shift, and go to state 46
    INTEGER    shift, and go to state 47
    REAL       shift, and go to state 48
    CHAR       shift, and go to state 49
    ID         shift, and go to state 4
    STRING     shift, and go to state 50
    SYS_CON    shift, and go to state 51
    SYS_FUNCT  shift, and go to state 52
